--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             }
             .parent {
                 border: 3px solid black;
-                width: 700px;
+                width: 1000px;
                 flex-direction: column;
                 display: flex;
             }
@@ -47,21 +47,18 @@
                 flex-wrap: wrap;
                 justify-content: space-between;
                 padding: 0 10px;
+                font-family: Raleway;
+                font-size: 17px;
             }
             .logo{
                 text-align: center;
-                width: 100px;
-                border: 2px solid red;
-            }
-            .selection {
-                font-family: Raleway;
-                font-size: 17px;
-                
+                width: 180px;
+                line-height: 30px;
             }
             .selection li{
                 float: left; /*вирівняти список*/
-                height: 35px;
-                line-height: 35px;
+                height: 30px;
+                line-height: 30px;
                 text-align: center;
                 width: 150px;
             }
@@ -70,7 +67,7 @@
                 color: black;
                 background-color: rgb(209, 209, 209);
                 border-radius: 10px 10px 0 0;
-                box-shadow: 0 0 20px rgb(209, 209, 209) ;
+                box-shadow: 0 0 10px rgb(209, 209, 209) ;
             }
 
             .selection li:active{
@@ -81,12 +78,18 @@
             /*header*/
 
             /*SEARCH BAR*/
+            .image {
+                display: flex;
+                margin: auto;
+                width: 150px;
+                height: 150px;
+            }
             .input {
                 display: flex;
-                margin: 10px auto;
+                margin: auto;
                 padding-left: 5px;
                 background-color: white;
-                width: 90%;
+                width: 60%;
                 height: 25px;
                 border: 1px solid grey;
                 border-radius: 10px;
@@ -103,7 +106,6 @@
             .input:active, .input.active {
                 box-shadow: 0 0 10px grey;
             }
-
             /*SEARCH BAR*/
 
         </style>
@@ -114,8 +116,7 @@
                 <!--HEADER-->
                 <div class="header">
                     <div class="logo">
-                        <b>LOGO</b>
-                    </div>
+                        <a>MAIN<b>MENU</b></a>                    </div>
                     <div class="selection">
                         <ul>
                             <li><a>Home</a></li>
@@ -125,9 +126,13 @@
                     </div>
                 </div>
                 <!--HEADER-->
-                <div>
-                    <input type="text" class="input"> 
-                </div>
+                <!--FINDER-->
+                    <div>
+                        <img src="/images/LOGO.jpg" class="image">
+                        <input type="text" class="input"> 
+                    </div>
+                <!--FINDER-->
+                <!--MAIN PART-->
                 <div class="child">
                     <div class="positions">
                         <H1>block 1</H1>
@@ -139,6 +144,7 @@
                         <H1>block 3</H1>
                     </div>
                 </div>
+                <!--MAIN PART-->
             </div>
         </div>
     </body>
