margin between search and blocks

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
                 justify-content: center;
             }
             .parent {
-                border: 3px solid black;
+               
                 width: 1000px;
                 flex-direction: column;
                 display: flex;
             }
             .child {
+                margin-top: 30px;
                 align-self: center;
                 border: 3px solid green;
                 display: flex;
