--- a/index.html
+++ b/index.html
@@ -116,13 +116,33 @@
             }
             /*SEARCH BAR*/
 
+            /*TOPOFFER*/
+
+            .topoffer {
+                display:flex;
+                flex-direction: column;
+                text-align: center;
+                line-height: 80px;
+                font-size: 50px;
+                font-family: Raleway;
+                margin-top: 30px;
+                margin-bottom: -25px;
+            }
+
+            .topoffer p {
+                font-size: 25px;
+            }
+
+
+            /*TOPOFFER*/
+
             /*position*/
             .position {
                 background-color: rgba(255, 255, 255, 0.822);
                 border-radius: 12px;
                 padding: 10px;
                 height: 200px;
-                margin-bottom: 10px;
+                margin-bottom: 15px;
                 display:flex;
                 flex-direction: row;
             }
@@ -217,6 +237,14 @@
                     <input type="text" placeholder="Search for the best place to rest..." class="input"> 
                 </div>
                 <!--FINDER-->
+                <!--TOPOFFER-->
+                <div class="topoffer">
+                    <H1>OR</H1>
+                    <p>select something from our best offers!</p>
+
+                </div>
+                <!--TOPOFFER-->
+
                 <!--MAIN PART-->
                 <div class="child">
                     <div class="position">
@@ -281,7 +309,7 @@
                     </div>
                     <div class="position">
                             <div class="pimage"><!--зображення кімнати-->
-                                <img src="/aparts/apart2_c.jpg">
+                                <img src="/aparts/apart3_c.jpg">
                             </div>
                             <div class="positioncontainer">
                                 <div class="ptext">
@@ -311,7 +339,7 @@
                     </div>
                     <div class="position">
                             <div class="pimage"><!--зображення кімнати-->
-                                <img src="/aparts/apart2_c.jpg">
+                                <img src="/aparts/apart3_c.jpg">
                             </div>
                             <div class="positioncontainer">
                                 <div class="ptext">
