--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>TravelLIST!</title>
         <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet"> <!--font-family: 'Nunito Sans', sans-serif;-->
         <link href="/css/style.css" rel="stylesheet">
         <meta charset="UTF-8">
-
     </head>
-    <body>
 
+    <body>
         <div class="grandparent"> <!--полотно-->
             <div class="parent"> <!--головний контейнер-->
                 <!--HEADER-->
@@ -193,9 +192,9 @@
                    </div>
                 </div>
                 <!--FOOTER-->
-
+                
             </div>
         </div>
-
     </body>
+
 </html>
