--- a/index.html
+++ b/index.html
@@ -8,10 +8,43 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>TravelLIST</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
+  <body style="background-color: rgb(209, 209, 209);">
+
+    <div class="container-fluid d-flex justify-content-center align-items-center flex-column">
+        <nav class="navbar navbar-expand-lg col-lg-8 navbar-dark rounded-bottom" style="background: rgba(0, 0, 0, 0.534);">
+            <a class="navbar-brand" href="#">Travel<b>LIST</b></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contacts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <div class="input-group mb-3 mt-5 col-lg-4">
+            <input type="text" class="form-control" placeholder="Search for the best place to rest..." aria-label="Search for the best place to rest..." aria-describedby="basic-addon2">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button">Search</button>
+            </div>
+          </div>
+
+    </div>
+
+
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
