--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>TravelLIST!</title>
+
   </head>
   <body style="background-color: rgb(209, 209, 209);">
-
+    <?php
+      
+    ?>
     <div class="container-fluid d-flex justify-content-center align-items-center flex-column " >
         <nav class="navbar navbar-expand-lg col-11 col-md-8 col-lg-8 navbar-dark rounded-bottom sticky-top" style="line-height: 13px; background: rgba(0, 0, 0, 0.534);">
             <a class="navbar-brand" href="#">Travel<b>LIST</b></a>
@@ -34,7 +37,7 @@
           </nav>
           <img src="/images/logo.png" class="img-fluid mt-3 col-11 col-md-8 col-lg-4 " alt="Responsive image">
 
-          <div class="input-group mb-1 col-12 col-md-8 col-lg-5 sticky-top" style="top: 6%;">
+          <div class="input-group mb-1 col-12 col-md-8 col-lg-5">
             <div class="input-group-prepend">
               <button class="btn btn-primary" type="button" id="button-addon1">Search</button>
             </div>
