--- a/index.html
+++ b/index.html
@@ -9,12 +9,29 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>TravelLIST!</title>
+    <?php
+      $hotels = [
+        [
+          "img" => "aparts/apart2_c.jpg",
+          "name" => "Incredible place #340",
+          "desc" => "Here we have another #incredible room just for 900009$ hrn per hour. Nothing specific: some lights swinging on the ceiling, sofa on da floor, etc.",
+        ],
+        [
+          "img" => "aparts/apart3_c.jpg",
+          "name" => "Incredible place #345",
+          "desc" => "Just a couple of words about this incredible place #345. Here we have a room and some things in it.",
+        ],
+        [
+          "img" => "apart4_c.jpg",
+          "name" => "Incredible place #347",
+          "desc" => "Just a couple of words about this incredible place #345. Here we have a room and some things in it.",
+        ],
+        ];
+    ?>
 
   </head>
   <body style="background-color: rgb(209, 209, 209);">
-    <?php
-      
-    ?>
+
     <div class="container-fluid d-flex justify-content-center align-items-center flex-column " >
         <nav class="navbar navbar-expand-lg col-11 col-md-8 col-lg-8 navbar-dark rounded-bottom sticky-top" style="line-height: 13px; background: rgba(0, 0, 0, 0.534);">
             <a class="navbar-brand" href="#">Travel<b>LIST</b></a>
