fixed some issues

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         [
           "img" => "aparts/apart4_c.jpg",
           "name" => "Incredible place #347",
-          "desc" => "Icredible desc for this incredible place...uh..",
+          "desc" => "Incredible desc for this incredible place...uh..",
         ],
         [
           "img" => "aparts/apart2_c.jpg",
@@ -39,7 +39,7 @@
         [
           "img" => "aparts/apart4_c.jpg",
           "name" => "Incredible place #347",
-          "desc" => "Icredible desc for this incredible place...uh..",
+          "desc" => "Incredible desc for this incredible place...uh..",
         ],
         [
           "img" => "aparts/apart2_c.jpg",
@@ -54,7 +54,7 @@
         [
           "img" => "aparts/apart4_c.jpg",
           "name" => "Incredible place #347",
-          "desc" => "Icredible desc for this incredible place...uh..",
+          "desc" => "Incredible desc for this incredible place...uh..",
         ],
         ];
     ?>
